PR bootstrap/86621 - 'alloca' bound is unknown in tree-vect-slp.c:1437:16

gcc/ChangeLog:
	* gcc/gimple-ssa-warn-alloca.c (alloca_call_type_by_arg): Avoid
	diagnosing calls with unknown arguments unless -Walloca-larger-than
	is restricted to less than PTRDIFF_MAX bytes.

From-SVN: r262923